Dodano ramke plotna, utworzono plik skrypt.js w katalogu /js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Gra w węża</title>
 </head>
 <body>
-<canvas id="plotno" width="800" height="400">Masz Internet Expolera. Spadaj!</canvas>
+<canvas style="border: 1px solid yellow;" id="plotno" width="800" height="400">Masz Internet Expolera. Spadaj!</canvas>
 </body>
 </html>
